--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Priyam Patel</title>
-    <link rel="shortcut icon" href="img/a-icon.ico" />
+    <link rel="shortcut icon" href="img/letter-p.png" />
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -47,14 +47,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand page-scroll" href="#page-top">Anubhav Gupta</a>
+                <a class="navbar-brand page-scroll" href="#page-top">Priyam Patel</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">About Me</a>
                     </li>
 <!--                     <li>
                         <a class="page-scroll" href="#workex">Work Experience</a>
@@ -78,9 +78,9 @@
     <header>
         <div class="header-content">
             <div class="header-content-inner">
-                <h1>HI! I'M Anubhav</h1>
+                <h1>HI! I'M Priyam</h1>
                 <hr>
-                <p>Analyzing and visualizing data to make better and informed business decisions</p>
+                <p>ONE LINE INTRO TEXT</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About me</a>
             </div>
         </div>
@@ -92,8 +92,8 @@
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <hr class="light">
-                    <p class="text-faded">Anubhav is motivated by the belief that data can be used to make better decisions. He wants to be able to make it easier for people to understand code and use data efficiently. Anubhav believes in open data and open source software. Anubhav primarily uses Python, but also has experience with R and Scala.</p>
-                    <p class="text-faded">Anubhav has worked at leading cyber security companies like Palo Alto Networks, Cloud Raxak and McAfee on network security, endpoint security and configuration and compliance. Anubhav graduated from the School of Information at UC Berkeley where he explored various facets of data science, data visualization and user research.</p>
+                    <p class="text-faded">Summary Para - 1 </p>
+                    <p class="text-faded">Summary Para - 2</p>
                 </div>
             </div>
         </div>
@@ -325,13 +325,13 @@
                     <a href="https://github.com/binnie869" class="fa fa-github fa-3x wow bounceIn"></a>
                 </div>
                 <div class="col-lg-2  text-center">
-                    <a href="https://www.linkedin.com/in/anubhavg1" class="fa fa-linkedin fa-3x wow bounceIn"></a>
+                    <a href="https://www.linkedin.com/in/priyam-patel332/" class="fa fa-linkedin fa-3x wow bounceIn"></a>
                 </div>
-                <!--div class="col-lg-1 text-center">
-                    <a class="fa fa-phone fa-3x wow bounceIn"></i>
-                </div-->
+                <!-- <div class="col-lg-2 text-center">
+                    <a href="callto:6462268252" class="fa fa-phone fa-3x wow bounceIn"></i>
+                </div> -->
                 <div class="col-lg-2 text-center">
-                    <a href="mailto:anubhav.rg@berkeley.edu" class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a>
+                    <a href="mailto:priyampatel332@gmail.com" class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a>
                 </div>
             </div>
         </div>
