--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
             <div class="header-content-inner">
                 <h1>HI! I'M Priyam</h1>
                 <hr>
-                <p>ONE LINE INTRO TEXT</p>
+                <p>Let's Connect!</p>
                 <a href="#about" class="btn btn-primary btn-xl page-scroll">About me</a>
             </div>
         </div>
@@ -88,7 +88,7 @@
 
     <section class="bg-primary" id="about" style="height: 100%">
         <div class="container">
-            <img src="img/anubhav.jpg" class="img-responsive" alt="" style="margin :auto">
+            <img src="img/About_me.JPG" class="img-responsive" alt="" style="margin :auto; width: 35%;">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <hr class="light">
@@ -327,7 +327,8 @@
                 <div class="col-lg-2  text-center">
                     <a href="https://www.linkedin.com/in/priyam-patel332/" class="fa fa-linkedin fa-3x wow bounceIn"></a>
                 </div>
-                <!-- <div class="col-lg-2 text-center">
+                <!-- Contact number 
+                    <div class="col-lg-2 text-center">
                     <a href="callto:6462268252" class="fa fa-phone fa-3x wow bounceIn"></i>
                 </div> -->
                 <div class="col-lg-2 text-center">
