--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
     <section class="bg-primary" id="about" style="height: 100%">
         <div class="container">
-            <img src="img/About_me.JPG" class="img-responsive" alt="" style="margin :auto; width: 35%;">
+            <img src="img/About_me.JPG" class="img-responsive" alt="" style="margin :auto; width: 30%;">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <hr class="light">
@@ -321,16 +321,15 @@
                     <h2 class="section-heading">Get In Touch!</h2>
                     <hr class="primary">
                 </div>
-                <div class="col-lg-2 col-lg-offset-3 text-center">
+                <!-- <div class="col-lg-2 col-lg-offset-3 text-center">
                     <a href="https://github.com/binnie869" class="fa fa-github fa-3x wow bounceIn"></a>
+                </div> -->
+                <div class="col-lg-2 col-lg-offset-3 text-center">
+                    <a href="callto:6462268252" class="fa fa-phone fa-3x wow bounceIn"></a>
                 </div>
                 <div class="col-lg-2  text-center">
                     <a href="https://www.linkedin.com/in/priyam-patel332/" class="fa fa-linkedin fa-3x wow bounceIn"></a>
-                </div>
-                <!-- Contact number 
-                    <div class="col-lg-2 text-center">
-                    <a href="callto:6462268252" class="fa fa-phone fa-3x wow bounceIn"></i>
-                </div> -->
+                </div>                
                 <div class="col-lg-2 text-center">
                     <a href="mailto:priyampatel332@gmail.com" class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></a>
                 </div>
