--- a/schoolyard.html
+++ b/schoolyard.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Anubhav Gupta</title>
+    <title>Priyam Patel</title>
     <link rel="shortcut icon" href="img/a-icon.ico" />
 
     <!-- Bootstrap Core CSS -->
@@ -93,7 +93,6 @@
                         </li>
                     </ul> 
                    <a href="https://docs.google.com/presentation/d/1ewfbc-4nWLGnuFK5DeA7jikWK7DlALVheyr765B7KA8/edit?usp=sharing" class="btn btn-primary btn-xl page-scroll" target="_blank">View Presentation</a>
-                   <a href="https://skfb.ly/NLSW" class="btn btn-primary btn-xl page-scroll" target="_blank" style="background-color: ">Link to 4d Design</a>
                    <a href="https://docs.google.com/a/berkeley.edu/document/d/1vtCwW_MkwTBmH51UHi6HuffCid3kYy5zv86zx1g8YSg/edit?usp=sharing" class="btn btn-primary btn-xl page-scroll" target="_blank">Link to Project Report</a>
                 </div>
                 <div class="col-lg-4 text-center" style="padding-top: 100px">
