--- a/index.html
+++ b/index.html
@@ -172,22 +172,21 @@
             <div class="row no-gutter">
                 <div class="col-lg-3 col-lg-offset-1 coldcol-sm-4">
                     <div style="width :95%">
-                        <a href="hydrobase.html" class="portfolio-box" >
-                            <img src="img/hydrobase.png" class="img-responsive" alt="">
+                        <a href="schoolyard.html" class="portfolio-box" >
+                            <img src="img/schoolyard.png" class="img-responsive" alt="">
                             <div class="portfolio-box-caption">
                                 <div class="portfolio-box-caption-content">
                                   <div class="project-category text-faded">
-                                      Internet of things
+                                      Real-Estate Case Study
                                   </div>
                                     <div class="project-name">
-                                        Hydrobase
+                                        The Schoolyard
                                     </div>
                                 </div>
                             </div>
                         </a>
-                        <h3 style="text-align: center">Product Manager</h3></br>
-                        <p class="text-muted" style="font-size: small"> A control system and an analytics engine to help plants grow</p>
-                        <!--b class="text-muted">Accepted Poster at IEEE Viz Conference 2015!</b-->
+                        <h3 style="text-align: center">Analyst</h3></br>
+                        <p class="text-muted" style="font-size: small"> ONE LINE EXPLANATION</p>                        
                     </div>
                 </div>
                 <div class="col-lg-3 col-lg-offset-1 col-sm-4">
