--- a/schoolyard.html
+++ b/schoolyard.html
@@ -10,7 +10,7 @@
     <meta name="author" content="">
 
     <title>Priyam Patel</title>
-    <link rel="shortcut icon" href="img/a-icon.ico" />
+    <link rel="shortcut icon" href="img/letter-p.png" />
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -25,13 +25,6 @@
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="css/creative.css" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 
@@ -68,7 +61,7 @@
             <div class="row">
                 <div class="col-lg-8 text-center" style="text-align: left">
                     <!-- <hr class="light"> -->
-                    <h2 style="font-style: italic">Hydrobase<h2>
+                    <h2 style="font-style: italic">NAIOP Case-Study Competition<h2>
                     <h4>THE PROBLEM</h4>
                     <p class="text-faded" style="font-size: small">
                     Increasingly there are a number of different systems and technologies being developed to support urban agriculture, ranging from Grove Lab’s Ecosystem to the MIT OpenAg initiative, each attempting to support effective food production. Yet the majority of these systems suffer from the same central problems, in that they require tight integration between the hardware and software. While this is certainly understandable due to the complicated nature of hardware and software interactions, it creates substantial barriers for entry.</p>
