--- a/schoolyard.html
+++ b/schoolyard.html
@@ -60,9 +60,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 text-center" style="text-align: left">
-                    <!-- <hr class="light"> -->
+                    <hr class="light">
                     <h2 style="font-style: italic">NAIOP Case-Study Competition<h2>
-                    <!-- <h4>THE PROBLEM</h4>
+                    <h4>THE PROBLEM</h4>
                     <p class="text-faded" style="font-size: small">
                     Increasingly there are a number of different systems and technologies being developed to support urban agriculture, ranging from Grove Lab’s Ecosystem to the MIT OpenAg initiative, each attempting to support effective food production. Yet the majority of these systems suffer from the same central problems, in that they require tight integration between the hardware and software. While this is certainly understandable due to the complicated nature of hardware and software interactions, it creates substantial barriers for entry.</p>
                     <h4>SOLUTION</h4>
@@ -84,7 +84,7 @@
                         <li>
                             <h5>Botanically inclined, technically disinclined</h5>This individual understands what plants need and is interested in accurately recording data about the plants but does not have the technical expertise to set up an automated system on their own. This user is predominantly focused on leveraging technology to support their existing practices in either research or commercial applications.
                         </li>
-                    </ul>  -->
+                    </ul> 
                    <a href="https://drive.google.com/file/d/1tRuDPwq-L5T9GM-N_yVaOY6z1_jHgv2t/view?usp=sharing" class="btn btn-primary btn-xl page-scroll" target="_blank">View Presentation</a>
                    <!-- <a href="https://docs.google.com/a/berkeley.edu/document/d/1vtCwW_MkwTBmH51UHi6HuffCid3kYy5zv86zx1g8YSg/edit?usp=sharing" class="btn btn-primary btn-xl page-scroll" target="_blank">Link to Project Report</a> -->
                 </div>
