--- a/schoolyard.html
+++ b/schoolyard.html
@@ -86,7 +86,7 @@
                         </li>
                     </ul> 
                    <a href="https://drive.google.com/file/d/1tRuDPwq-L5T9GM-N_yVaOY6z1_jHgv2t/view?usp=sharing" class="btn btn-primary btn-xl page-scroll" target="_blank">View Presentation</a>
-                   <!-- <a href="https://docs.google.com/a/berkeley.edu/document/d/1vtCwW_MkwTBmH51UHi6HuffCid3kYy5zv86zx1g8YSg/edit?usp=sharing" class="btn btn-primary btn-xl page-scroll" target="_blank">Link to Project Report</a> -->
+                   <a href="https://docs.google.com/a/berkeley.edu/document/d/1vtCwW_MkwTBmH51UHi6HuffCid3kYy5zv86zx1g8YSg/edit?usp=sharing" class="btn btn-primary btn-xl page-scroll" target="_blank">Link to Project Report</a>
                 </div>
                 <div class="col-lg-4 text-center" style="padding-top: 100px">
                 <img src="img/hydrobase/NAIOP - Fin Analysis.png" class="img-responsive" alt="" style="margin :auto" height="300" width="300">
